# Invoice_Generator

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  pytest.ini  run.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  clients.py  dependencies.py  invoices.py
backend/app/models/: __init__.py  client.py  invoice.py  line_item.py
backend/app/services/: __init__.py  pdf_export.py
backend/docs/: SUPABASE_SETUP.md
backend/migrations/: 001_initial_schema.sql
backend/scripts/: verify_database.py
backend/tests/: test_api_structure.py  test_integration.py  test_models.py  test_pdf_export.py  test_properties.py  test_setup.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Clients.tsx  InvoiceDetail.tsx  InvoiceForm.tsx  Invoices.tsx  Login.tsx  Register.tsx
frontend/src/types/: index.ts
